# swiftbank-backend

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: deploy.yml
swiftbank/: manage.py
swiftbank/core/: asgi.py  settings.py  urls.py  wsgi.py
swiftbank/core/settings/: __init__.py  base.py
swiftbank_backend/: asgi.py  settings.py  urls.py  wsgi.py
