[tool.poetry]
name = "swiftbank-backend"
version = "0.1.0"
description = ""
authors = ["don-sabu <donsabu@tutanota.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
