[tool.poetry]
name = "swiftbank-backend"
version = "0.1.0"
description = ""
authors = ["don-sabu <donsabu@tutanota.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
django-split-settings = "^1.3.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"


[tool.isort]
multi_line_output = 5
line_length = 119


[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
